# mitten

./: .gitattributes  .gitignore  .mcp.json  README.md  default_config.toml  mitten.desktop  mitten.service  pyproject.toml
.github/workflows/: build-windows.yml
mitten/: __init__.py  __main__.py  cli.py  config.py  daemon.py  daemon_utils.py  detect.py  discord_presence.py  errors.py  intro.py  metrics.py  notify.py  recorder.py  save.py  setup_wizard.py  sounds.py  trigger.py  updater.py  utils.py
mitten/gui/: __init__.py  anim.py  app.py  button_detect.py  clips.py  config_io.py  editor.py  editor_export.py  editor_model.py  main_window.py  resources.py  settings.py  stats.py  system_setup.py  themes.py  tray.py
