[project]
name = "mitten"
version = "0.3.4.3"
description = "Personal Linux screen recording clip tool"
requires-python = ">=3.11"
dependencies = [
    "evdev>=1.7.0",
    "PyQt6>=6.5",
]

[project.scripts]
mitten = "mitten.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
stats = ["psutil>=5.9"]

[tool.setuptools.packages.find]
where = ["."]
include = ["mitten*"]

[tool.setuptools.package-data]
mitten = ["assets/*.png", "assets/*.oga", "assets/*.mp3"]
